# seL4-rust-tutorial

./: .gitmodules  .linkcheck-ignore.yml  Makefile  README.md
.github/workflows/: push.yaml
.reuse/: dep5
book/: .gitignore  Cargo.toml  Makefile  book.toml  rust-toolchain.toml  shell.nix
book/.cargo/: config.toml
book/crates/preprocessor/: Cargo.toml
book/crates/preprocessor/src/: main.rs
book/crates/show-steps/: Cargo.toml
book/crates/show-steps/src/: main.rs
book/crates/wrapper/: Cargo.toml
book/crates/wrapper/src/: main.rs
book/preprocessor/: Cargo.toml  rust-toolchain.toml
book/preprocessor/src/: main.rs
book/src/: README.md  SUMMARY.md  introduction.md  setup.md
book/src/microkit/: README.md  challenge.md  ipc.md  shared-memory.md
book/src/root-task/: README.md  kernel-objects.md  serial-device.md  spawn-task.md  spawn-thread.md
docker/: Makefile
