#
# Copyright 2024, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#

[package]
name = "x-preprocessor"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mdbook = { workspace = true }
clap = { workspace = true }
regex = "1.10"
semver = "1"
serde_json = "1"
git2 = "0.19.0"
itertools = "0.13.0"
either = "1.13.0"
